--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        height: 100%;
-      }
-    </style>
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
+    <input placeholder="Search Box" type="search" data-bind="value: filter, valueUpdate: 'afterkeydown'" autocomplete="off" class="controls" id="pac-input">
     <div id="map"></div>
-    <script src="js/app.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQmZ7ZUsAhdxqWScMVhR1j7h66ynLzi9g&callback=initMap"
+    
+    <script src="js/knockout-3.4.0.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQmZ7ZUsAhdxqWScMVhR1j7h66ynLzi9g&libraries=places&callback=initMap"
     async defer></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
