--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    
+  
+    <!-- <form id="form" style="top:675px" data-bind="submit:filter">
+    Filter: <input type="text" data-bind='value:filteredItem, valueUpdate: "afterkeydown"' />
+    <button type="submit" data-bind="enable: filteredItem().length > 0">Add</button>
+    </form> -->
+ 
     <div>
-    <select id="list" multiple="multiple" height="15" data-bind="options:allItems, selectedOptions:selectedItems" style="top: 700px"> </select>
+    <select id="list" multiple="multiple" height="15" data-bind="options:allItems" style="top: 700px"> </select>
     </div>
     <input placeholder="Search Box" type="search" data-bind="value: filter, valueUpdate: 'afterkeydown'" autocomplete="off" class="controls" id="pac-input">
     <div id="map"></div>
