--- a/index.html
+++ b/index.html
@@ -8,19 +8,29 @@
   </head>
   <body>
   
-    <form id="form" style="top:58%" >
-    Filter: <input type="text" >
+    <!-- <form id="form" style="top:55%">
+    Filter: <input type="text"/>
     </form>
  
-    <div>
-    <select id="list" multiple="multiple" height="15" data-bind="options:allItems" style="top: 65%"> </select>
-    </div>
-    <!-- <input placeholder="Search Box" type="search" data-bind="value: filter, valueUpdate: 'afterkeydown'" autocomplete="off" class="controls" id="pac-input"> -->
-    <div id="map"></div>
+   <div>
     
+    <select class="list" id="list" multiple="true" height="15" data-bind="options: listedItems, click: onChange" style="top: 65%"> </select>
+    </div> -->
+
+    <div id="map"></div>
+
+    <input type="search" placeholder="keyword search..." data-bind="textInput: userInput, event: {keyup: filterMarkers}">
+    
+    <ul id="list-view" data-bind="foreach: visiblePlaces">
+      <li data-bind="text: name"></li>
+    </ul>
+   
     <script src="js/knockout-3.4.0.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQmZ7ZUsAhdxqWScMVhR1j7h66ynLzi9g&libraries=places&callback=initMap"
-    async defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
+
+
+<!-- AIzaSyCQmZ7ZUsAhdxqWScMVhR1j7h66ynLzi9g -->
