Proper infowindows show up for each marker! Still stuck on making list clickable, currently opens an infowindow for first item in JSON for every click on list.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <input type="search" placeholder="Filter Places" data-bind="textInput: userInput, event: {keyup: filterMarkers}">
     
-    <ul id="list-view" data-bind="foreach: visiblePlaces, click: listClick">
+    <ul id="list-view" data-bind="foreach: visiblePlaces, click: $parent.listClick">
       <li data-bind="text: name"></li>
     </ul>
    
