--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <input type="search" placeholder="Filter Places" data-bind="textInput: userInput, event: {keyup: filterMarkers}">
     
-    <ul id="list-view" data-bind="foreach: visiblePlaces, click: listClick">
-      <li data-bind="text: name"></li>
+    <ul id="list-view" data-bind="foreach: visiblePlaces">
+      <li data-bind="text: name, click: $parent.listClick"></li>
     </ul>
    
     <script src="js/knockout-3.4.0.js"></script>
