--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <li data-bind="text: name, click: $parent.listClick"></li>
     </ul>
    
-    <script src="js/knockout-3.4.0.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" ></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyCQmZ7ZUsAhdxqWScMVhR1j7h66ynLzi9g"></script>
     <script src="js/app.js"></script>
   </body>
