--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Simple Map</title>
+    <title>Neighborhood Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link href="css/main.css" rel="stylesheet">
@@ -12,15 +12,23 @@
 
     <div id="map"></div>
 
-    <input type="search" placeholder="Filter Places" data-bind="textInput: userInput, event: {keyup: filterMarkers}">
+    <div id="controls">
+        <input type="search" placeholder="Filter Places" data-bind="textInput: userInput, event: {keyup: filterMarkers}">
 
-    <ul id="list-view" data-bind="foreach: visiblePlaces">
-        <li data-bind="text: name, click: $parent.listClick"></li>
-    </ul>
+        <ul id="list-view" data-bind="foreach: visiblePlaces">
+            <li data-bind="text: name, click: $parent.listClick"></li>
+        </ul>
+    </div>
 
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+    <!-- asynchronously loading google maps api and providing an error message upon failure to load -->
+    <script async src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCQmZ7ZUsAhdxqWScMVhR1j7h66ynLzi9g&callback=initMap" onerror="googleError()"></script>
+    <script>
+        function googleError() {
+          alert("Google map fail to load!");
+        }
+    </script>
+    <script src="js/knockout-3.4.0.js"></script>
     <script async src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyCQmZ7ZUsAhdxqWScMVhR1j7h66ynLzi9g"></script>
     <script src="js/app.js"></script>
 </body>
 
